# apt-domain-mcp

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
.ai/: portal-instructions-admin-rest.md  portal-instructions-autogen-complex-id.md  portal-instructions-delete-complex.md  portal-instructions-documents-fix.md  portal-verify-delete-2026-04-22.md
.ai/sessions/: session-2026-04-14-0001.md  session-2026-04-14-0002.md  session-2026-04-15-0001.md  session-2026-04-15-0002.md  session-2026-04-20-0001.md  session-2026-04-20-0002.md  session-2026-04-22-0001.md  session-2026-04-22-0002.md
docs/: 01_architecture.md  02_synthetic_complex_spec.md
examples/: README.md
examples/boram_bucheon/: complex.json  regulation_v1.md  regulation_v2_diff.md  regulation_v3_diff.md
examples/geumbit_bupyeong/: complex.json  regulation_v1.md  regulation_v2_diff.md  regulation_v3_diff.md
examples/haneul_sejong/: complex.json  regulation_v1.md  regulation_v2_diff.md  regulation_v3_diff.md
examples/solhyang_songpa/: complex.json  regulation_v1.md  regulation_v2_diff.md  regulation_v3_diff.md
scripts/: apply_schema.py  md_to_pdf.py
sql/: migrate_regulation_revision_fk_cascade.sql  schema.sql
src/apt_domain_mcp/: config.py  server.py
synthetic/: regulation_v1.md  regulation_v2_diff.md  regulation_v3_diff.md
synthetic/meetings/: 2023-11-20_regular.md  2024-03-15_regular.md  2024-06-10_extraordinary.md  (+3 more)
tests/: conftest.py  test_admin_api.py  test_mcp_tool_schemas.py  test_parser_meeting.py  test_parser_regulation.py  test_parser_regulation_diff.py
(+35 files in other folders)
