[project]
name = "apt-domain-mcp"
version = "0.1.0"
description = "공동주택 도메인 지식(관리규약·회의록·운영산출물) MCP 서버 — 단지별 멀티테넌트"
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "mcp>=1.0.0",
    "starlette>=0.37",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "asyncpg>=0.29",
    "pypdf>=4.0",
    "pdfplumber>=0.11",
    "reportlab>=4.0",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/apt_domain_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires Postgres",
]

[tool.ruff]
line-length = 100
target-version = "py312"
